# lighttpd1.4

./: .cvsignore  .gitattributes  .gitignore  AUTHORS  CLAUDE.md  CMakeLists.txt  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.FreeBSD  SConstruct  autogen.sh  ci-build.sh  config.h.in  config.py-sample  configure.ac  configure.in  distribute.sh.in  lighttpd.spec.in  meson.build  meson_options.txt  packdist.sh
.github/workflows/: ci.yml  cifuzz.yml  dependabot.yml  meson.yml  pr.yml
cmake/: FindLibEV.cmake  LighttpdMacros.cmake
cygwin/: .cvsignore  Makefile.am  lighttpd.README  lighttpd.README.in  setup.hint
debian/: Makefile.am  README.Debian.ex  changelog  control  copyright  cron.d.ex  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d  lighttpd-default.ex  lighttpd.conf  lighttpd.doc-base.EX  lighttpd.logrotate  lighttpd.postinst  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
doc/: .cvsignore  CMakeLists.txt  Makefile.am  access.txt  accesslog.txt  alias.txt  authentication.txt  authentification.txt  cgi.txt  cml.txt  compress.txt  configuration.txt  dirlisting.txt  evhost.txt  expire.txt  extforward.txt  fastcgi-state.txt  fastcgi.txt  features.txt  geoip.txt  initscripts.txt  lighttpd-angel.8  lighttpd.1  lighttpd.8  lighttpd.conf  magnet.txt  meson.build  mysqlvhost.txt  performance.txt  plugins.txt  proxy.txt  rc.lighttpd  redirect.txt  rewrite.txt  rrdtool.txt  scgi.txt  secdownload.txt  security.txt  setenv.txt  simple-vhost.txt  (+11 more)
doc/avahi/: lighttpd.service
doc/config/: Makefile.am  lighttpd.annotated.conf  lighttpd.conf  modules.conf
doc/config/conf.d/: Makefile.am  access_log.conf  auth.conf  cgi.conf  cml.conf  compress.conf  csrf.conf  debug.conf  deflate.conf  dirlisting.conf  evhost.conf  expire.conf  fastcgi.conf  geoip.conf  magnet.conf  mime.conf  mod.template  mysql_vhost.conf  proxy.conf  rrdtool.conf  scgi.conf  secdownload.conf  simple_vhost.conf  ssi.conf  status.conf  tls.conf  trigger_b4_dl.conf  userdir.conf  webdav.conf
doc/config/vhosts.d/: vhosts.template
doc/outdated/: Makefile.am  accesslog.txt  authentication.txt  cml.txt  compress.txt  configuration.txt  dirlisting.txt  expire.txt  fastcgi.txt  features.txt  geoip.txt  magnet.txt  performance.txt  rewrite.txt  secdownload.txt  skeleton.txt  ssi.txt  ssl.txt  state.txt  status.txt
doc/scripts/: Makefile.am  cert-staple.sh  create-mime.conf.pl
doc/systemd/: Makefile.am  lighttpd-http-ipv4.socket  lighttpd-http-ipv6.socket  lighttpd-https-ipv4.socket  lighttpd-https-ipv6.socket  lighttpd.service  lighttpd.socket
doc/wolfssl/: README  index.html  lighttpd.conf  lighttpd_client_auth.conf  server.pem
docs/superpowers/plans/: 2026-05-23-buffer-c-to-bsc-pilot.md
docs/superpowers/specs/: 2026-05-23-buffer-c-to-bsc-pilot-design.md
openwrt/: .cvsignore  Makefile.am  S51lighttpd  conffiles  control  control.in  lighttpd.conf  lighttpd.mk  lighttpd.mk.in
qnx/: .gitignore  LICENSE.md  README.md
qnx/shiplist/: shiplist-sdp-lighttpd-internal.xml  shiplist-sdp-lighttpd_tests-internal.xml
qnx/test/: README.md
qnx/test/mkqnximage/opt_scripts/: opt_test_lighttpd
scripts/: ci-build.sh
scripts/cmake/: LighttpdMacros.cmake
src/: .cvsignore  CMakeLists.txt  Makefile.am  SConscript  algo_hmac.c  algo_hmac.h  algo_md.h  algo_md5.c  algo_md5.h  algo_sha1.c  algo_sha1.h  algo_splaytree.c  algo_splaytree.h  algo_xxhash.c  algo_xxhash.h  array.c  array.h  base.h  base64.c  base64.h  base_decls.h  bitset.c  bsc_compat.h  buffer.c  buffer.h  burl.c  burl.h  chunk.c  chunk.h  ck.c  ck.h  config.c  config.h.cmake  configfile-glue.c  configfile.c  configfile.h  configparser.h  configparser.y  connections-glue.c  connections.c  (+225 more)
src/compat/: README  fastcgi.h
src/compat/_WIN32/: README
src/ls-hpack/: LICENSE  README.md  huff-tables.h  lshpack.c  lshpack.h  lsxpack_header.h
src/t/: README  test_array.c  test_base64.c  test_buffer.c  test_burl.c  test_common.c  test_configfile.c  test_http_cgi.c  test_http_header.c  test_http_kv.c  test_http_range.c  test_http_status.c  test_keyvalue.c  test_mod.c  test_mod_access.c  test_mod_alias.c  test_mod_evasive.c  test_mod_evhost.c  test_mod_expire.c  test_mod_indexfile.c  test_mod_simple_vhost.c  test_mod_ssi.c  test_mod_staticfile.c  test_mod_userdir.c  test_request.c
tests/: .cvsignore  404-handler.conf  CMakeLists.txt  LightyTest.pm  Makefile.am  README  SConscript  accessdeny-01.sh  auth-01.sh  auth-02.sh  auth-03.sh  basic-01.sh  basic-02.sh  basic-03.sh  basic-05.sh  basic-06.sh  basic-07.sh  basic-08.sh  basic-09.sh  basic-10.sh  basic-11.sh  broken-header-01.sh  broken-key-01.sh  broken-key-02.sh  broken-key-03.sh  broken-key-04.sh  bug-03.sh  bug-06.conf  bug-06.sh  bug-12.conf  bug-12.sh  bug-14.sh  bug-15-2.sh  bug-15-3.sh  bug-15.sh  bug-urldecode-00.sh  cachable.t  cgi-01.sh  cgi-02.sh  cgi-03.sh  (+125 more)
tests/docroot/: 404.pl  Makefile.am  cgi.pl
tests/docroot/123/: 100.txt  Makefile.am  dummyfile.bla
tests/docroot/www/: 404.fcgi  404.pl  Makefile.am  cgi-pathinfo.pl  cgi.pl  crlfcrash.pl  get-env.php  get-server-env.php  ip.pl  nph-status.pl  pathinfo.php  phphost.php  phpself.php  prefix.fcgi  send404.pl  sendfile.php  ssi-include.shtml
tests/docroot/www/go/: cgi.php
tests/docroot/www/indexfile/: Makefile.am  index.pl  query_string.pl  return-404.php
